# Advanced_OOP

./: README.md
ET1/: neliomatriisi.txt  odotukset.txt
et2/: Greeter.cpp  Greeter.h
et3/: Greeter.cpp  Greeter.h  SquareMatrix.h
et4/: Greeter.cpp  Greeter.h  greeter_tests.cpp
et5/: CMakeLists.txt  Greet.cpp  Greet.h  Greeter.cpp  Greeter.h  HelloGreet.cpp  HelloGreet.h  MoroGreet.cpp  MoroGreet.h  greeter_tests.cpp
et6/: CompositeElement.h  IntElement.h  SymbolicSquareMatrix.h
vt1/: CMakeLists.txt  isSqrMatrix.cpp  isSqrMatrix.h  main.cpp  vt1.cbp  vt1.depend  vt1.layout
vt2/: CMakeLists.txt  IntElement.cpp  IntElement.h  SquareMatrix.cpp  SquareMatrix.h  main.cpp
vt3/: IntElement.cpp  IntElement.h  SquareMatrix.cpp  SquareMatrix.h  SquareMatrix_Tests.cpp
vt4/: CMakeLists.txt  (+5 more)
vt5/: CMakeLists.txt  ConcreteSquareMatrix.cpp  ConcreteSquareMatrix.h  Element.h  IntElement.cpp  IntElement.h  SymbolicSquareMatrix.cpp  SymbolicSquareMatrix.h  Valuation.h  VariableElement.cpp  VariableElement.h  catch.hpp  tests.cpp
vt6/: CMakeLists.txt  CompositeElement.cpp  CompositeElement.h  ConcreteSquareMatrix.cpp  ConcreteSquareMatrix.h  Element.cpp  SymbolicSquareMatrix.cpp  SymbolicSquareMatrix.h  VariableElement.cpp  VariableElement.h  tests.cpp
vt7/: CMakeLists.txt  CompositeElement.cpp  ElemSqrMtrx.cpp  ElemSqrMtrx.h  Element.cpp  IntElement.cpp  IntElement.h  SymbolicSquareMatrix.cpp  TElement.cpp  TElement.h  VariableElement.cpp  catch.hpp  tests.cpp
vt7/OldClasses/: IntElement.h  SymbolicSquareMatrix.cpp  SymbolicSquareMatrix.h  VariableElement.h
(+1 files in other folders)
